fix the build script